<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dialpad</string>
    <string name="action_settings">Settings</string>
    <string name="dialpad_view">DialpadView</string>
    
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="star">Star</string>
    <string name="zero">0</string>
    <string name="pound">Pound</string>
    <string name="enter_phone_number">Enter phone number&#8230;</string>
    <string name="call">Call</string>
    <string name="erase">Erase</string>
    
    <string name="download">Download</string>
    <string name="download_location">Download location</string>
    <string name="download_new_sounds">Download new sounds</string>
    <string name="voice_files">Voice files</string>
    <string name="select_voice">Select voice</string>
    <string name="source_for_new_voices">Source for new voices</string>
    <string name="storage_location">Storage location</string>
    <string name="delete_voices">Delete voices</string>
    
    <string name="data_download_location">http://dt031g.programvaruteknik.nu/dialpad/sounds/</string>
    
    <string name="sound_files_unavailable">Cannot access sound files. Sound disabled.</string>
    <string name="decompression_failed">Decompression failed. Check storage location.</string>

</resources>