<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editText_dialpad"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/enter_phone_number"
        android:inputType="none"
        android:singleLine="true"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/imageButton_dialpad_arrow"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/dialpad_arrow_custom"
        android:contentDescription="@string/erase"
        android:longClickable="true" />

    <ImageButton
        android:id="@+id/imageButton_dialpad_call"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/dialpad_call_custom"
        android:contentDescription="@string/call" />

</LinearLayout>